--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ptk.kotilnsample">
 
+    <!-- Activity 의 Label 은 기본 제목으로 사용됩니다. -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,8 +10,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BmiKotlinActivity" android:label="BmiKotlinActivity" />
-        <activity android:name=".BmiJavaActivity" android:label="BmiJavaActivity" />
+        <activity android:name=".VariableKatlinActivity" android:label="VariableKatlinActivity" />
+        <activity android:name=".VariableJavaActivity" android:label="VariableJavaActivity" />
+        <activity
+            android:name=".BmiKotlinActivity"
+            android:label="BmiKotlinActivity" />
+        <activity
+            android:name=".BmiJavaActivity"
+            android:label="BmiJavaActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
