--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ptk.kotilnsample">
 
-    <!-- Activity 의 Label 은 기본 제목으로 사용됩니다. -->
+    <!-- 'android:name' 속성은 앱에서 사용할 Application 클래스를 지정하는 속성으로, 앱이 실행되는 동안에는 반드시 하나의 인스턴스가
+          존재하기 때문에, Application 클래스는 applicationContext 의 값이 'NULL'이 아닌 것을 보장합니다.
+          Application 클래스를 바꾸려면 AndroidManifest.xml 파일에서 명시적으로 저정해줘야 합니다. -->
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VariableKatlinActivity" android:label="VariableKatlinActivity" />
-        <activity android:name=".VariableJavaActivity" android:label="VariableJavaActivity" />
+
+        <!-- Activity 의 label 은 기본 제목으로 사용됩니다. -->
+        <activity android:name=".ControlKotlinActivity" android:label="ControlKotlinActivity" />
+        <activity android:name=".ControlJavaActivity" android:label="ControlJavaActivity" />
+        <activity
+            android:name=".VariableKotlinActivity"
+            android:label="VariableKotlinActivity" />
+        <activity
+            android:name=".VariableJavaActivity"
+            android:label="VariableJavaActivity" />
         <activity
             android:name=".BmiKotlinActivity"
             android:label="BmiKotlinActivity" />
